feat(Source): Customized Slack flink source